src/versions: import tentative code for libcbor

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,libarchive,libdialog,libedit,libevent,libpcap,ncurses,versions.yaml
+targets=bsddialog,byacc,bzip2,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,versions.yaml
 dist=Makefile
 
 #targets
@@ -18,6 +18,12 @@ sources=bzip2.c
 [libarchive]
 type=binary
 sources=libarchive.c
+
+[libcbor]
+type=binary
+ldflags=-lprivatecbor
+sources=libcbor.c
+enabled=0
 
 [libdialog]
 type=binary
