src/versions: add patch

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,versions.yaml
+targets=bsddialog,byacc,bzip2,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,versions.yaml
 dist=Makefile
 
 #targets
@@ -49,8 +49,12 @@ sources=libpcap.c
 type=binary
 sources=ncurses.c
 
+[patch]
+type=binary
+sources=patch.c
+
 [versions.yaml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses) > versions.yaml
-depends=bsddialog,byacc,bzip2,libarchive,libedit,libevent,libpcap,ncurses
+command=(./bsddialog; ./byacc; ./bzip2; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch) > versions.yaml
+depends=bsddialog,byacc,bzip2,libarchive,libedit,libevent,libpcap,ncurses,patch
 enabled=0
