src/versions: rename versions.yaml to versions.yml

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,versions.yaml
+targets=bsddialog,byacc,bzip2,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,versions.yml
 dist=Makefile
 
 #targets
@@ -53,8 +53,8 @@ sources=ncurses.c
 type=binary
 sources=patch.c
 
-[versions.yaml]
+[versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch) > versions.yaml
+command=(./bsddialog; ./byacc; ./bzip2; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch) > versions.yml
 depends=bsddialog,byacc,bzip2,libarchive,libedit,libevent,libpcap,ncurses,patch
 enabled=0
