project.conf: register a "merge-versions" target
The goal is to generate version numbers from the source files, and merge
the output obtained back into database.yml.

--- a/project.conf
+++ b/project.conf
@@ -2,7 +2,7 @@ vendor=FreeBSD-Foundation
 package=alpha-omega-beach-cleaning
 version=20250922
 
-targets=dependencies.md,format,plan.md,security.md,spdx
+targets=dependencies.md,format,merge-versions,plan.md,security.md,spdx
 subdirs=src
 dist=COPYING,Makefile,README.md,database.yml,tools/spdx.sh
 
@@ -19,6 +19,12 @@ depends=$(OBJDIR)src/aobc-generate,database.yml
 [format]
 type=command
 command=go fmt src/cmd/aobc-generate/aobc-generate.go
+phony=1
+enabled=0
+
+[merge-versions]
+type=command
+command=(cd src/versions && $(MAKE) versions.yml) && yq database.yml src/versions/versions.yml
 phony=1
 enabled=0
 
