--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,versions.yml
+targets=bsddialog,byacc,bzip2,file,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,versions.yml
 dist=Makefile
 
 #targets
@@ -14,6 +14,10 @@ sources=byacc.c
 [bzip2]
 type=binary
 sources=bzip2.c
+
+[file]
+type=binary
+sources=file.c
 
 [libarchive]
 type=binary
@@ -55,6 +59,6 @@ sources=patch.c
 
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch) > versions.yml
-depends=bsddialog,byacc,bzip2,libarchive,libedit,libevent,libpcap,ncurses,patch
+command=(./bsddialog; ./byacc; ./bzip2; ./file; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch) > versions.yml
+depends=bsddialog,byacc,bzip2,file,libarchive,libedit,libevent,libpcap,ncurses,patch
 enabled=0
