src/versions: add tcpdump

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,file,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,versions.yml
+targets=bsddialog,byacc,bzip2,file,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,tcpdump,versions.yml
 dist=Makefile
 
 #targets
@@ -57,8 +57,12 @@ sources=ncurses.c
 type=binary
 sources=patch.c
 
+[tcpdump]
+type=binary
+sources=tcpdump.c
+
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./file; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch) > versions.yml
-depends=bsddialog,byacc,bzip2,file,libarchive,libedit,libevent,libpcap,ncurses,patch
+command=(./bsddialog; ./byacc; ./bzip2; ./file; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch; ./tcpdump) > versions.yml
+depends=bsddialog,byacc,bzip2,file,libarchive,libedit,libevent,libpcap,ncurses,patch,tcpdump
 enabled=0
