src/versions: add dtc

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,file,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,tcpdump,versions.yml
+targets=bsddialog,byacc,bzip2,dtc,file,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,tcpdump,versions.yml
 dist=Makefile
 
 #targets
@@ -14,6 +14,10 @@ sources=byacc.c
 [bzip2]
 type=binary
 sources=bzip2.c
+
+[dtc]
+type=binary
+sources=dtc.c
 
 [file]
 type=binary
@@ -63,6 +67,6 @@ sources=tcpdump.c
 
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./file; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch; ./tcpdump) > versions.yml
-depends=bsddialog,byacc,bzip2,file,libarchive,libedit,libevent,libpcap,ncurses,patch,tcpdump
+command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch; ./tcpdump) > versions.yml
+depends=bsddialog,byacc,bzip2,dtc,file,libarchive,libedit,libevent,libpcap,ncurses,patch,tcpdump
 enabled=0
