src/versions: add openssl

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,dtc,file,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,patch,tcpdump,versions.yml
+targets=bsddialog,byacc,bzip2,dtc,file,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,openssl,patch,tcpdump,versions.yml
 dist=Makefile
 
 #targets
@@ -57,6 +57,11 @@ sources=libpcap.c
 type=binary
 sources=ncurses.c
 
+[openssl]
+type=binary
+ldflags=-lcrypto
+sources=openssl.c
+
 [patch]
 type=binary
 sources=patch.c
@@ -67,6 +72,6 @@ sources=tcpdump.c
 
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./patch; ./tcpdump) > versions.yml
-depends=bsddialog,byacc,bzip2,dtc,file,libarchive,libedit,libevent,libpcap,ncurses,patch,tcpdump
+command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
+depends=bsddialog,byacc,bzip2,dtc,file,libarchive,libedit,libevent,libpcap,ncurses,openssl,patch,tcpdump
 enabled=0
