src/versions: add flex

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,dtc,file,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,openssl,patch,tcpdump,versions.yml
+targets=bsddialog,byacc,bzip2,dtc,file,flex,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,openssl,patch,tcpdump,versions.yml
 dist=Makefile
 
 #targets
@@ -22,6 +22,10 @@ sources=dtc.c
 [file]
 type=binary
 sources=file.c
+
+[flex]
+type=binary
+sources=flex.c
 
 [libarchive]
 type=binary
@@ -72,6 +76,6 @@ sources=tcpdump.c
 
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
-depends=bsddialog,byacc,bzip2,dtc,file,libarchive,libedit,libevent,libpcap,ncurses,openssl,patch,tcpdump
+command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
+depends=bsddialog,byacc,bzip2,dtc,file,flex,libarchive,libedit,libevent,libpcap,ncurses,openssl,patch,tcpdump
 enabled=0
