--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,dtc,file,flex,libarchive,libcbor,libdialog,libedit,libevent,libpcap,ncurses,openssl,patch,tcpdump,versions.yml
+targets=bsddialog,byacc,bzip2,dtc,file,flex,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,ncurses,openssl,patch,tcpdump,versions.yml
 dist=Makefile
 
 #targets
@@ -53,6 +53,10 @@ cflags=-isystem /usr/include/private/event1
 ldflags=-lprivateevent1
 sources=libevent.c
 
+[liblzma]
+type=binary
+sources=liblzma.c
+
 [libpcap]
 type=binary
 sources=libpcap.c
@@ -76,6 +80,6 @@ sources=tcpdump.c
 
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
-depends=bsddialog,byacc,bzip2,dtc,file,flex,libarchive,libedit,libevent,libpcap,ncurses,openssl,patch,tcpdump
+command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
+depends=bsddialog,byacc,bzip2,dtc,file,flex,libarchive,libedit,libevent,liblzma,libpcap,ncurses,openssl,patch,tcpdump
 enabled=0
